<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp"
        tools:context=".MainActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/no_image" />

    <EditText
            android:id="@+id/et_NumInput1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/firstNum"
            android:inputType="number" />

    <EditText
            android:id="@+id/et_NumInput2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/secondNum"
            android:inputType="number" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btn_Plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:text="@string/plusSign"
                android:textColor="@color/black"
                android:backgroundTint="@color/shade" />

        <Button
                android:id="@+id/btn_Minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:text="@string/minusSign"
                android:textColor="@color/black"
                android:backgroundTint="@color/shade" />

        <Button
                android:id="@+id/btn_Multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:text="@string/multiplySign"
                android:textColor="@color/black"
                android:backgroundTint="@color/shade" />

        <Button
                android:id="@+id/btn_Divide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:text="@string/divideSign"
                android:textColor="@color/black"
                android:backgroundTint="@color/shade" />

        <Button
                android:id="@+id/btn_Clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:text="@string/clearSign"
                android:textColor="@color/black"
                android:backgroundTint="@color/shade" />

    </LinearLayout>

    <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/zero"
            android:textSize="100sp"
            android:textColor="@color/black" />

</LinearLayout>